--- a/templates/shortcodes/nsfwabout.html
+++ b/templates/shortcodes/nsfwabout.html
@@ -1,5 +1,7 @@
-{% set data = load_data(path=path) %}
+{% set data = load_data(path=path, required=false) %}
+{% if data %}
 <fieldset class="nsfw hidden nsfw-box bg-black rounded-lg inline">
     <legend class="uppercase bg-purple-700 rounded-lg font-mono px-2 text-center">NSFW</legend>
     <p class="m-0 p-4 pt-0 whitespace-pre-line">{{ data.nsfw.about }}</p>
 </fieldset>
+{% endif %}
