--- a/templates/shortcodes/nsfwgallery.html
+++ b/templates/shortcodes/nsfwgallery.html
@@ -1,4 +1,5 @@
-{% set data = load_data(path=path) %}
+{% set data = load_data(path=path, required=false) %}
+{% if data %}
 {% for asset in page.assets -%}
 {%- if asset is matching("/.*/gallery_nsfw/.*\.(png|jpg|jpeg)") -%}
 {% set meta = get_image_metadata(path=asset) %}
@@ -34,3 +35,4 @@
 </div>
 {%- endif %}
 {%- endfor %}
+{%- endif %}
